--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Jogo da Velha</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@600;700&family=Righteous&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@600;700&family=Righteous&family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="img/logo.png" class="logo"/>
+      <img src="img/logo.png" class="logo" />
     </header>
-    
+
     <main>
-        <div class="container">
-            <div class="grid">
-                <div class="celula"></div>
-                <div class="celula"></div>
-                <div class="celula"></div>
-                <div class="celula"></div>
-                <div class="celula"></div>
-                <div class="celula"></div>
-                <div class="celula"></div>
-                <div class="celula"></div>
-                <div class="celula"></div>
-            </div>
-        </div>
+      <div class="grid">
+        <div class="celula"></div>
+        <div class="celula"></div>
+        <div class="celula"></div>
+        <div class="celula"></div>
+        <div class="celula"></div>
+        <div class="celula"></div>
+        <div class="celula"></div>
+        <div class="celula"></div>
+        <div class="celula"></div>
+      </div>
     </main>
     <footer>
-        <img src="img/img1.png" class="img1">
+      <img src="img/img1.png" class="img1" />
     </footer>
 
     <script src="js/scripts.js"></script>
-</body>
+  </body>
 </html>
