--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@600;700&family=Righteous&family=Roboto:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -23,7 +19,7 @@
 
     <main>
       <div class="grid">
-        <div class="celula"></div>
+        <div class="celula jogador-x"></div>
         <div class="celula"></div>
         <div class="celula"></div>
         <div class="celula"></div>
@@ -33,6 +29,8 @@
         <div class="celula"></div>
         <div class="celula"></div>
       </div>
+
+      <h1 class="jogador">Jogador da Vez:</h1>
     </main>
     <footer>
       <img src="img/img1.png" class="img1" />
