Implementação dos jogadores alternados e sinalização do jogador atual

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
     <main>
       <div class="grid">
-        <div class="celula jogador-x"></div>
-        <div class="celula"></div>
-        <div class="celula"></div>
-        <div class="celula"></div>
-        <div class="celula"></div>
-        <div class="celula"></div>
-        <div class="celula"></div>
-        <div class="celula"></div>
-        <div class="celula"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
+        <div class="celula" onclick="adicionarJogador(this)"></div>
       </div>
 
-      <h1 class="jogador">Jogador da Vez:</h1>
+      <h1 class="jogador-da-vez">Jogador da Vez:</h1>
     </main>
     <footer>
       <img src="img/img1.png" class="img1" />
